Add more yfinance examples

--- a/finance/yahoo_finance.ipynb
+++ b/finance/yahoo_finance.ipynb
@@ -10,6 +10,10 @@
     "\n",
     "https://pypi.org/project/yfinance/\n",
     "\n",
+    "https://algotrading101.com/learn/yfinance-guide/\n",
+    "\n",
+    "https://github.com/GregBland/yfinance_article\n",
+    "\n",
     "https://hvplot.holoviz.org/"
    ]
   },
@@ -38,8 +42,17 @@
     "INPUT_NEWS_FOLDER_NAME = \"/Users/abuzatu/Work/data/finance/stocks\"\n",
     "\n",
     "# choose the company, e.g. ticker SPCE for the company Virgin Galactic\n",
-    "STOCK_TICKER = \"SPCE\"\n",
-    "STOCK_NAME = \"Virgin Galactic\"\n",
+    "STOCK_TICKER = \"NIO\"\n",
+    "STOCK_NAME = \"AMRH\"\n",
+    "\n",
+    "ADD_OUTSIDE_TRADING_HOURS = False\n",
+    "ADD_DIVIDENTS_AND_STOCK_SPLITS = False\n",
+    "\n",
+    "# 1d - for all historical data\n",
+    "# 1h - for an interval of max 730 days (~ 2 years)\n",
+    "# 30m, 15m, 5m, 2m - for an interval of max 60 days (~ 2 months)\n",
+    "# 1m - for an interval of max 7 days\n",
+    "INTERVAL = \"1h\" # # 1m (minute) works only for the previous week from the current moment\n",
     "\n",
     "LOCALIZE_US_STOCK_MARKET = \"America/New_York\"\n",
     "DATETIME_TODAY = pd.to_datetime(str(datetime.date.today())).tz_localize(LOCALIZE_US_STOCK_MARKET)\n",
@@ -53,7 +66,7 @@
     "    DATE_FINAL_PLOT   = None\n",
     "elif True:\n",
     "    STRING_DATE_INITIAL_DATA = \"2020-12-22 09:20:00\"\n",
-    "    STRING_DATE_FINAL_DATA   = \"2020-12-22 23:59:59\"\n",
+    "    STRING_DATE_FINAL_DATA   = \"2020-12-29 23:59:59\"\n",
     "    STRING_DATE_INITIAL_PLOT = STRING_DATE_INITIAL_DATA\n",
     "    STRING_DATE_FINAL_PLOT   = STRING_DATE_FINAL_DATA \n",
     "    # \n",
@@ -62,11 +75,6 @@
     "    DATE_INITIAL_PLOT =  pd.to_datetime(STRING_DATE_INITIAL_PLOT).tz_localize(LOCALIZE_US_STOCK_MARKET)\n",
     "    DATE_FINAL_PLOT =  pd.to_datetime(STRING_DATE_FINAL_PLOT).tz_localize(LOCALIZE_US_STOCK_MARKET)\n",
     "\n",
-    "# 1d - for all historical data\n",
-    "# 1h - for the last 730 days (~ 2 years)\n",
-    "# 30m, 15m, 5m, 2m - for the last 60 days (~ 2 months)\n",
-    "# 1m - for the last 7 days\n",
-    "INTERVAL = \"1h\" # # 1m (minute) works only for the previous week from the current moment\n",
     "DO_PLOT_NEWS = True\n",
     "if INTERVAL == \"1d\":\n",
     "    DATETIME = \"Date\"\n",
@@ -179,8 +187,147 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_original = ticker.history(period = \"max\")\n",
-    "df_original = ticker.history(start = DATE_INITIAL_DATA, end = DATE_FINAL_DATA, interval = INTERVAL)\n",
+    "ticker.actions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ticker.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ticker.info['forwardPE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ticker.info['dividendRate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ticker.dividends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ticker.info[\"marketCap\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# current volume\n",
+    "# ticker.info[\"volume\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# average volume over 24h\n",
+    "# ticker.info[\"averageVolume\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# average volume over the last 10 days\n",
+    "# ticker.info[\"averageVolume10days\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# day low\n",
+    "# ticker.info[\"dayLow\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# day high\n",
+    "# ticker.info[\"dayHigh\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 52 week low\n",
+    "# ticker.info[\"fiftyTwoWeekLow\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 52 week high\n",
+    "# ticker.info[\"fiftyTwoWeekHigh\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can ask the following period relative to the present\n",
+    "# \"1d\", \"5d\", \"1mo\", \"3mo\", \"6mo\", \"1y\", \"2y\", \"5y\", \"10y\", \"ytd\", \"max\"\n",
+    "if False:\n",
+    "    df_original = ticker.history(period = \"1d\")\n",
+    "\n",
+    "if True:\n",
+    "    df_original = ticker.history(start = DATE_INITIAL_DATA, \n",
+    "                                 end = DATE_FINAL_DATA, \n",
+    "                                 interval = INTERVAL, \n",
+    "                                 prepost = ADD_OUTSIDE_TRADING_HOURS,\n",
+    "                                 actions = ADD_DIVIDENTS_AND_STOCK_SPLITS,\n",
+    "                                )\n",
+    "    \n",
+    "# to get high and lows since ever for each week\n",
+    "if False:\n",
+    "    df_original = ticker.history(period = \"max\", interval = \"1wk\")\n",
+    "\n",
     "df_original[0:15]"
    ]
   },
@@ -191,6 +338,15 @@
    "outputs": [],
    "source": [
     "df_original[-50:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_original[:-10]"
    ]
   },
   {
