download data with different intervals

--- a/finance/yahoo_finance_all.ipynb
+++ b/finance/yahoo_finance_all.ipynb
@@ -1454,8 +1454,8 @@
     "\n",
     "# 1d, 5d, 1wk, 1mo, 3mo - for all historical data\n",
     "# 1h - for an interval of max 730 days (~ 2 years)\n",
-    "# 30m, 15m, 5m, 2m - for an interval of max 60 days (~ 2 months)\n",
-    "# 1m - for an interval of max 7 days from the last month\n",
+    "# 30m, 15m, 5m, 2m - for an interval of max 60 days from the last 60 days\n",
+    "# 1m - for an interval of max 7 days from the 30 month\n",
     "INTERVAL = \"1d\" # # 1m (minute) works only for the previous week from the current moment\n",
     "\n",
     "LOCALIZE_US_STOCK_MARKET = \"America/New_York\"\n",
