Move functions to utils; calculate first date of stock

--- a/finance/yahoo_finance_one.ipynb
+++ b/finance/yahoo_finance_one.ipynb
@@ -39,8 +39,9 @@
    "outputs": [],
    "source": [
     "INPUT_FOLDER_NAME = \"/Users/abuzatu/Work/data/finance/stocks\"\n",
-    "input_folder_name_data = f\"{INPUT_FOLDER_NAME}/processed_data/210102\"\n",
-    "input_folder_name_news = f\"{INPUT_FOLDER_NAME}/news\""
+    "input_folder_name_data = f\"{INPUT_FOLDER_NAME}/processed_data/210109\"\n",
+    "input_folder_name_news = f\"{INPUT_FOLDER_NAME}/news\"\n",
+    "input_file_name_info = f\"{INPUT_FOLDER_NAME}/info/info.pickle\""
    ]
   },
   {
@@ -49,11 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get list of all the tickers available\n",
-    "from pathlib import Path\n",
-    "p = Path(input_folder_name_data).rglob(\"df_*.pickle\")\n",
-    "list_stock_ticker = sorted(set([x.name.split(\".\")[0].split(\"_\")[-1] for x in p if x.is_file()]))\n",
-    "list_stock_ticker"
+    "list_stock_ticker = get_list_stock_ticker_in_folder(input_folder_name_data)\n",
+    "#  list_stock_ticker"
    ]
   },
   {
@@ -62,9 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STOCK_TICKER = \"SPCE\"\n",
-    "date_start_all = \"19-01-01\"\n",
-    "date_end_all = \"21-01-01\""
+    "STOCK_TICKER = \"W\"\n",
+    "date_start_all = get_first_day_of_stock_ticker(input_file_name_info, STOCK_TICKER)\n",
+    "date_end_all = \"2021-01-10\"\n",
+    "suffix = \"al\""
    ]
   },
   {
@@ -73,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_name_data = f\"{input_folder_name_data}/df_{date_start_all}_{date_end_all}_al_{STOCK_TICKER}.pickle\"\n",
+    "input_file_name_data = f\"{input_folder_name_data}/df_{date_start_all}_{date_end_all}_{suffix}_{STOCK_TICKER}.pickle\"\n",
     "input_file_name_data"
    ]
   },
@@ -93,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True:\n",
+    "if False:\n",
     "    # get new data frame for today\n",
     "    PERIOD = None\n",
     "    ADD_OUTSIDE_TRADING_HOURS = True\n",
@@ -102,7 +101,7 @@
     "    INTERVAL = \"1m\"\n",
     "    df1 = read_data(STOCK_TICKER,\n",
     "                   PERIOD,\n",
-    "                   pd.to_datetime(\"2021-01-02\").tz_localize(LOCALIZE_US_STOCK_MARKET),\n",
+    "                   pd.to_datetime(\"2021-01-01\").tz_localize(LOCALIZE_US_STOCK_MARKET),\n",
     "                   pd.to_datetime(\"2021-01-09\").tz_localize(LOCALIZE_US_STOCK_MARKET),\n",
     "                   INTERVAL,\n",
     "                   ADD_OUTSIDE_TRADING_HOURS,\n",
@@ -110,8 +109,11 @@
     "                   AUTO_ADJUST)\n",
     "    # merge the two\n",
     "    df_ = pd.concat([df__, df1], axis = 0)\n",
-    "    df_.sort_index(inplace = True)\n",
-    "df1"
+    "    \n",
+    "else:\n",
+    "    df_ = df__.copy()\n",
+    "df_.sort_index(inplace = True)\n",
+    "df_ = df_[df_.Close < 1e6]"
    ]
   },
   {
@@ -140,8 +142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True:\n",
-    "    s_s = \"2020-12-28 00:00:00\"\n",
+    "if False:\n",
+    "    s_s = \"2020-12-01 00:00:00\"\n",
     "    s_e = \"2021-01-09 00:00:00\"\n",
     "    s = pd.to_datetime(s_s).tz_localize(LOCALIZE_US_STOCK_MARKET)\n",
     "    e = pd.to_datetime(s_e).tz_localize(LOCALIZE_US_STOCK_MARKET)\n",
@@ -150,15 +152,6 @@
     "else:\n",
     "    df = df_.copy()\n",
     "    df_news = df_news_.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
    ]
   },
   {
@@ -208,6 +201,44 @@
    "outputs": [],
    "source": [
     "# plt.plot(df.Close)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[df.Close > 65]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df__[df__.index > pd.to_datetime(\"2021-01-01\").tz_localize(LOCALIZE_US_STOCK_MARKET)]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = get_subset_df(df__, \"2021-01-01 00:00:00\")\n",
+    "df3"
    ]
   }
  ],
