update finance one and download

--- a/finance/yahoo_finance_download.ipynb
+++ b/finance/yahoo_finance_download.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "INPUT_FOLDER_NAME_INFO = \"/Users/abuzatu/Work/data/finance/stocks/info\"\n",
     "INPUT_FILE_NAME = \"/Users/abuzatu/Work/data/finance/stocks/tickers1.txt\"\n",
-    "INPUT_FOLDER_NAME = \"/Users/abuzatu/Work/data/finance/stocks/processed_data\"\n",
+    "INPUT_FOLDER_NAME = \"/Users/abuzatu/Work/data/finance/stocks/processed_data/210109\"\n",
     "OUTPUT_FOLDER_NAME = \"/Users/abuzatu/Work/data/finance/stocks/processed_data/210111\"\n",
     "\n",
     "# creates output folder\n",
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = run_all_stock_stickers(INPUT_FOLDER_NAME_INFO, INPUT_FOLDER_NAME, INPUT_FILE_NAME, OUTPUT_FOLDER_NAME, ADD_OUTSIDE_TRADING_HOURS, ADD_DIVIDENDS_AND_STOCK_SPLITS, AUTO_ADJUST)"
+    "df = run_all_stock_stickers(INPUT_FOLDER_NAME_INFO, INPUT_FOLDER_NAME, INPUT_FILE_NAME, OUTPUT_FOLDER_NAME, PERIOD, ADD_OUTSIDE_TRADING_HOURS, ADD_DIVIDENDS_AND_STOCK_SPLITS, AUTO_ADJUST)"
    ]
   },
   {
