--- a/finance/yahoo_finance_one.ipynb
+++ b/finance/yahoo_finance_one.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STOCK_TICKER = \"W\"\n",
+    "STOCK_TICKER = \"ENVB\"\n",
     "date_start_all = get_first_day_of_stock_ticker(input_file_name_info, STOCK_TICKER)\n",
     "date_end_all = \"2021-01-10\"\n",
     "suffix = \"al\""
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if False:\n",
+    "if True:\n",
     "    # get new data frame for today\n",
     "    PERIOD = None\n",
     "    ADD_OUTSIDE_TRADING_HOURS = True\n",
@@ -101,8 +101,8 @@
     "    INTERVAL = \"1m\"\n",
     "    df1 = read_data(STOCK_TICKER,\n",
     "                   PERIOD,\n",
-    "                   pd.to_datetime(\"2021-01-01\").tz_localize(LOCALIZE_US_STOCK_MARKET),\n",
-    "                   pd.to_datetime(\"2021-01-09\").tz_localize(LOCALIZE_US_STOCK_MARKET),\n",
+    "                   pd.to_datetime(\"2021-01-10\").tz_localize(LOCALIZE_US_STOCK_MARKET),\n",
+    "                   pd.to_datetime(\"2021-01-15\").tz_localize(LOCALIZE_US_STOCK_MARKET),\n",
     "                   INTERVAL,\n",
     "                   ADD_OUTSIDE_TRADING_HOURS,\n",
     "                   ADD_DIVIDENDS_AND_STOCK_SPLITS,\n",
@@ -115,6 +115,22 @@
     "df_.sort_index(inplace = True)\n",
     "df_ = df_[df_.Close < 1e6]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
