--- a/finance/other/medium_blogs_with_examples.ipynb
+++ b/finance/other/medium_blogs_with_examples.ipynb
@@ -23,6 +23,39 @@
     "\n",
     "* Medium, Use correlation to predict the market index, https://medium.com/analytics-vidhya/use-correlation-to-predict-market-index-dc16136bd28c"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data sources:\n",
+    "\n",
+    "https://github.com/binance/binance-public-data\n",
+    "\n",
+    "trading.view\n",
+    "\n",
+    "investing.com\n",
+    "\n",
+    "https://min-api.cryptocompare.com/data/histoday"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metrics calcuations\n",
+    "\n",
+    "https://medium.com/analytics-vidhya/how-to-find-stocks-to-invest-in-using-python-87b5169190d5\n",
+    "\n",
+    "https://medium.com/analytics-vidhya/python-for-financial-analysis-series-python-tools-day-4-4b16dfecc3df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
