Update Revolut pertofolio evaluation with utils.py

--- a/finance/Revolut/AdrianBuzatu_Revolut.ipynb
+++ b/finance/Revolut/AdrianBuzatu_Revolut.ipynb
@@ -42,6 +42,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# List of deposits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_deposit = pd.concat(\n",
+    "    [\n",
+    "        get_df_deposit(\"2020\"),\n",
+    "        get_df_deposit(\"2021\"),\n",
+    "    ],\n",
+    "    axis = 0,\n",
+    ")\n",
+    "    \n",
+    "df_deposit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_deposit.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_deposit.sum()-23061.07-11798.87"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# List of trades"
    ]
   },
@@ -70,8 +112,93 @@
    "source": [
     "df = df_trade.copy()\n",
     "# df = df[df.ticker == \"SPCE\"]\n",
-    "df = df[df.date < \"2021-10\"]\n",
+    "df = df[df.date < \"2021-11\"]\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"a\"] = df[\"stock\"] * df[\"price\"] + df[\"cash\"]\n",
+    "df[(df[\"a\"]>= 0.01)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"b\"] = df[\"stock\"] * df[\"cash\"]\n",
+    "df[df[\"b\"] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(df[df[\"action\"] == \"B\"][\"cash\"]>0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(df[df[\"action\"] == \"S\"][\"cash\"]<0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"c\"] = df[\"price\"] - df[\"price_with_fees\"]\n",
+    "sum(abs(df[\"c\"]) > 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[abs(df[\"c\"]) > 0.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df.loc[df.action == \"B\", [\"date\", \"stock\", \"price\", \"action\", \"stock_left\", \"realised_gain\"]]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum(df2[\"stock\"] - df2[\"stock_left\"])"
    ]
   },
   {
@@ -82,6 +209,32 @@
    "source": [
     "df = update_df_trade_with_realised(df)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option(\"display.max_rows\", 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df.loc[:, [\"date\", \"stock\", \"price\", \"action\", \"stock_left\", \"stock_left_cost\", \"cash\"]] #  \"realised_gain\"]]\n",
+    "df2.head(213)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Only one ticker"
    ]
   },
   {
@@ -118,6 +271,22 @@
    "outputs": [],
    "source": [
     "df[df.ticker==ticker].stock_left_cost.sum()/df[df.ticker==ticker].stock_left.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df.ticker==ticker].realised_gain.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All tickers"
    ]
   },
   {
@@ -174,6 +343,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sum[\"stock_left_cost\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sum[\"stock_left_real_cost\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "19.31/21.380000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_deposit.deposit.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all = get_df_all(df_sum)\n",
+    "df_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[\"realised_gain\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[\"unrealised_gain\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[\"total_gain\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[df_all.stock_left > 0.5].sort_index()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,6 +432,13 @@
     "\n",
     "A realised loss of 119.67 euro was obtained at Revolut in calendar year 2020."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
