--- a/finance/Revolut/AdrianBuzatu_Revolut_2021.ipynb
+++ b/finance/Revolut/AdrianBuzatu_Revolut_2021.ipynb
@@ -19,7 +19,11 @@
    "source": [
     "input_file_name = \"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_trades_2020.txt\"\n",
     "input_file_name_end = \"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_trades_2020_end.txt\"\n",
-    "input_file_name_deposits = \"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_trades_2020_deposits.txt\""
+    "input_file_name_deposits = \"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_trades_2020_deposits.txt\"\n",
+    "\n",
+    "input_file_name = \"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_trades_2021.txt\"\n",
+    "input_file_name_end = \"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_trades_2021_end.txt\"\n",
+    "input_file_name_deposits = \"/Users/abuzatu/Work/data/finance/stocks/Revolut/Revolut_trades_2021_deposits.txt\""
    ]
   },
   {
@@ -56,7 +60,7 @@
    "source": [
     "def get_date(x):\n",
     "    list_el = x.split(\"/\")\n",
-    "    return pd.to_datetime(f\"2020-{list_el[0]}-{list_el[1]}\")\n",
+    "    return pd.to_datetime(f\"2021-{list_el[0]}-{list_el[1]}\")\n",
     "\n",
     "def change_date(df):  \n",
     "    df[\"date\"] = df.date.map(lambda x: get_date(x))\n",
@@ -123,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check\n",
+    "# check if we get the sign correctly to be opposite for stock and cash\n",
     "df[\"multiply\"] = df[\"stock\"] * df[\"cash\"]\n",
     "df[df[\"multiply\"] > 0.0]"
    ]
@@ -136,6 +140,7 @@
    "source": [
     "# the value cash should be used, as it takes into account also the fees paid for the trade\n",
     "# for the first few months I paid 1 euro per trade, plus the fee from SEC of 0.01$ per trade\n",
+    "# for each row (trade) the net shold represent the fee paid, so should be below 1$, close to 0.01 dollar\n",
     "df[\"net\"] = (df[\"stock\"] * df[\"price\"]) + df[\"cash\"]\n",
     "df.sort_values(by=\"net\")"
    ]
@@ -203,10 +208,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# group by ticker\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df.ticker == \"VEEV\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# group by ticker and sum to see the summary of all trades on one stock\n",
+    "# counter is how many trades happened on that stock\n",
     "df1 = df.groupby(\"ticker\").agg(\"sum\")\n",
     "df1.drop([\"price\"], axis = 1, inplace = True)\n",
     "df1[\"stock\"] = df1[\"stock\"].map(lambda x: round(x, 6))\n",
+    "df1[\"cost_basis\"] = - df1[\"cash\"] / df1[\"stock\"]\n",
+    "df1 = df1.sort_values(by=\"cash\", ascending=True)\n",
     "df1"
    ]
   },
@@ -416,88 +442,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As expected, the values in the stock column are identifical to those in the stock_end, since we add the trades of 2020, which are from the beginning of trading at Revolut to the end. But let's also check explicitely that it is the same for all"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# There should be nothing here\n",
-    "df2[df2[\"stock_end\"] - df2[\"stock\"] > 0.001]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2[\"real_total_cost\"] = - df2[\"cash\"]\n",
-    "df2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Stocks still had shown at `stock_end` each at average `unit_cost`, with a `total_cost`, and a the `price_end` produce a `value_end`, where `value_end-total_cost` produces the unrealised gain on the stock\n",
-    "\n",
-    "The real total gain "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2[\"unrealised_gain\"] = df2[\"value_end\"] - df2[\"total_cost\"]\n",
-    "df2[\"total_gain\"] = df2[\"value_end\"] - df2[\"real_total_cost\"]\n",
-    "df2[\"realised_gain\"] = df2[\"total_gain\"] - df2[\"unrealised_gain\"]\n",
-    "df2[\"realised_gain2\"] = - df2[\"real_total_cost\"] + df2[\"total_cost\"]\n",
-    "# df2[\"realised_gain\"] = df2[\"value_end\"] + df2[\"cash\"]\n",
-    "df2.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for each stock, calculate the value the stock has + the cash I spent on the stock\n",
-    "# to see if overall I am in positive or negative with this stock\n",
     "df2[\"final\"] = df2[\"value_end\"] + df2[\"cash\"]\n",
-    "# final2 uses the direct cost of buying, not the losses already made in the stock like final does\n",
     "df2[\"final2\"] = df2[\"total_cost\"] + df2[\"cash\"]\n",
     "df2[\"final2\"] = df2[\"final2\"].map(lambda x: round(x, 6))\n",
     "df2"
@@ -530,42 +480,6 @@
    "outputs": [],
    "source": [
     "df2.final2.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.realised_gain.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.realised_gain2.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.total_gain.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.unrealised_gain.sum()"
    ]
   },
   {
@@ -610,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.value_end.sum() - df_deposit.deposit.sum()"
+    "df_deposit.deposit.sum() - df2.value_end.sum()"
    ]
   },
   {
@@ -619,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.total_cost.sum() - df_deposit.deposit.sum()"
+    "df_deposit.deposit.sum() - df2.total_cost.sum()"
    ]
   },
   {
