--- a/finance/stocks/run.ipynb
+++ b/finance/stocks/run.ipynb
@@ -75,9 +75,9 @@
     "# give the times in local time\n",
     "# datetime_start = pd.Timestamp(\"2021-07-09 00:00:00\").tz_localize(LOCALIZE_US_STOCK_MARKET).tz_convert(LOCALIZE_LOCAL).tz_localize(None).to_pydatetime()\n",
     "datetime_end = pd.Timestamp.now()\n",
-    "datetime_start = datetime_end - pd.Timedelta(4, \"w\")\n",
+    "datetime_start = datetime_end - pd.Timedelta(2, \"d\")\n",
     "period = None\n",
-    "interval = \"30m\"\n",
+    "interval = \"1m\"\n",
     "add_outside_trading_hours = True # keep pre-market and after hours\n",
     "auto_adjust = True # Adjust all OHLC (Open/High/Low/Close prices) automatically\n",
     "add_dividends_and_stock_splits = True # dividends and stock splits\n",
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True:\n",
+    "if False:\n",
     "    s_s = \"2021-08-01 04:00:00\"\n",
     "    s_e = \"2021-08-15 00:00:00\"\n",
     "    s = pd.to_datetime(s_s).tz_localize(LOCALIZE_US_STOCK_MARKET)\n",
